--- a/config/config.json
+++ b/config/config.json
@@ -2,11 +2,19 @@
   "DEFAULT": {
     "ALFRED_LOG_FILE": "/var/log/alfred/alfred.log",
     "ALFRED_LOG_LEVEL": "INFO",
-    "EVENTS_LOG_FILE": "/var/log/alfred/alfred.log",
-    "EVENTS_LOG_LEVEL": "INFO",
-    "EVENTS_DB_FILE": "/../data/events.json",
-    "EVENTS_DB_TMP_FILE": "/../data/events.tmp",
     "BOT_TOKEN": "¿?",
-    "CLIENT_IDS": ["¿?", "¿?"]
+    "CLIENT_IDS": ["¿?","¿?"]
+  },
+  "EVENTS": {
+    "LOG_FILE": "/var/log/alfred/alfred.log",
+    "LOG_LEVEL": "INFO",
+    "DB_FILE": "/opt/alfred/data/events.json",
+    "TMP_PATH": "/var/tmp"
+  },
+  "BIRTHDAYS": {
+    "LOG_FILE": "/var/log/alfred/alfred.log",
+    "LOG_LEVEL": "INFO",
+    "DB_FILE": "/opt/alfred/data/birthdays.json",
+    "TMP_PATH": "/var/tmp"
   }
 }
