show amazon product details

--- a/config/config.json
+++ b/config/config.json
@@ -38,7 +38,10 @@
     "SCRAPING_MAX_TRIES": "3",
     "REQUESTS_DELAY": "5",
     "GRAPHITE_SERVER": "127.0.0.1",
-    "GRAPHITE_PORT": "2003",
-    "GRAPHITE_PREFIX": "datos.amazon"
+    "GRAPHITE_CARBON_PORT": "2003",
+    "GRAPHITE_API_PORT": "8080",
+    "GRAPHITE_PREFIX": "datos.amazon",
+    "REAL_DISCOUNT_HISTORY_TIME_CRITERIA": "6mon",
+    "REAL_DISCOUNT_AVG_PERCENT_CRITERIA": "15"
   }
 }
