show history prices graph

--- a/config/config.json
+++ b/config/config.json
@@ -41,7 +41,7 @@
     "GRAPHITE_CARBON_PORT": "2003",
     "GRAPHITE_API_PORT": "8080",
     "GRAPHITE_PREFIX": "datos.amazon",
-    "REAL_DISCOUNT_HISTORY_TIME_CRITERIA": "6mon",
+    "MAX_GRAPH_HISTORY": "1y",
     "REAL_DISCOUNT_AVG_PERCENT_CRITERIA": "15"
   }
 }
