Fix: Included the xmls pip library needed for the Amazon module

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ ENV BASE_PATH=/alfred
 WORKDIR ${BASE_PATH}
 
 RUN apt-get update && apt-get install -y taskwarrior \
-  && pip install python-telegram-bot==10.1.0 requests==2.12.4 beautifulsoup4==4.6.0 graphyte==1.4 --upgrade \
+  && pip install python-telegram-bot==10.1.0 requests==2.12.4 beautifulsoup4==4.6.0 graphyte==1.4 lxml==4.6.3 --upgrade \
   && groupadd -g 10001 alfred \
   && useradd -g 10001 -u 10001 -d /home/alfred -m -s /usr/sbin/nologin alfred \
   && mkdir ${BASE_PATH}/log
